--- a/package.json
+++ b/package.json
@@ -4,20 +4,43 @@
   "description": "ABM-app para empresa de seguros",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --config ./webpack.dev.config.js",
+    "build": "webpack",
+    "build:local": "webpack --env.NODE_ENV=local",
+    "prod": "webpack -p --env.NODE_ENV=production",
+    "server": "webpack --config webpack.server.config.js && babel-node --presets react,es2015,stage-2 server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Ricardomatiasm/ABM-App.git"
+  },
+  "devDependencies": {
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "clean-webpack-plugin": "0.1.17",
+    "css-loader": "0.28.7",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
+    "style-loader": "0.19.0",
+    "url-loader": "0.6.2",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.3"
+  },
+  "dependencies": {
+    "express": "4.16.2",
+    "prop-types": "15.6.0",
+    "react": "16.1.1",
+    "react-dom": "16.1.1"
   },
   "author": "Ramb Jeremias || Villan, Ivan || Mascareño, Ricardo",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Ricardomatiasm/ABM-App/issues"
   },
-  "homepage": "https://github.com/Ricardomatiasm/ABM-App#readme",
-  "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
-  }
+  "homepage": "https://github.com/Ricardomatiasm/ABM-App#readme"
 }
