--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "prop-types": "15.6.0",
     "react": "16.1.1",
     "react-dom": "16.1.1",
-    "react-materialize": "^2.6.0"
+    "react-materialize": "^2.6.0",
+    "react-router-dom": "^4.3.1"
   },
   "author": "Ramb Jeremias || Villan, Ivan || Mascareño, Ricardo",
   "license": "ISC",
