--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "webpack-dev-server": "2.9.3"
   },
   "dependencies": {
-    "express": "4.16.2",
+    "express": "^4.16.2",
+    "mongoose": "^5.4.1",
+    "morgan": "^1.9.1",
     "prop-types": "15.6.0",
     "react": "16.1.1",
     "react-dom": "16.1.1",
