--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "description": "ABM-app para empresa de seguros",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --config ./webpack.dev.config.js",
-    "build": "webpack",
-    "build:local": "webpack --env.NODE_ENV=local",
-    "prod": "webpack -p --env.NODE_ENV=production",
-    "server": "webpack --config webpack.server.config.js && babel-node --presets react,es2015,stage-2 server.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "webpack": "webpack --mode development --watch"
   },
   "repository": {
     "type": "git",
@@ -19,6 +16,7 @@
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
@@ -28,8 +26,8 @@
     "file-loader": "1.1.5",
     "style-loader": "0.19.0",
     "url-loader": "0.6.2",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.3"
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "express": "^4.16.2",
@@ -41,7 +39,7 @@
     "react-materialize": "^2.6.0",
     "react-router-dom": "^4.3.1"
   },
-  "author": "Ramb Jeremias || Villan, Ivan || Mascareño, Ricardo",
+  "author": "Ramb, Jeremias || Villan, Ivan || Mascareño, Ricardo",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Ricardomatiasm/ABM-App/issues"
